# Proyecto_CompiladoresI

./: 11811146_InformeTecnico.docx  AnalizadorRust.cpp  AnalizadorRust.h  CMakeLists.txt  LexerRust.cpp  LexerRust.h  Logger.cpp  Logger.h  Makefile  Nodo.cpp  NodoAST.cpp  NodoAST.h  ParserRust.cpp  ParserRust.h  Token.h  Tokens.txt  lectura.cpp  lectura.h  main.cpp  main.rs  main.txt  prueba.rs  prueba.txt  prueba2.rs  prueba3.rs  prueba4.rs  pruebaast.txt  pruebaast2.txt  pruebaast3.txt  pruebaast4.txt  pruebas.txt  pruebatokens.txt
Pruebas/: main.rs  prueba.rs  prueba2_error.rs  prueba3_error.rs  prueba4.rs  prueba4_error.rs
resultados/2025-09-26_10-34/: tokens.txt
resultados/2025-09-26_10-36/: AST.txt  tokens.txt
resultados/2025-09-26_10-38/: AST.txt  tokens.txt
resultados/2025-09-26_10-40/: pruebaAST.txt  tokens.txt
resultados/2025-09-26_10-57/: Errores.txt  asterrores.txt  tokenserrores.txt
resultados/2025-09-26_10-59/: AST.txt  Errores.txt  tokens.txt
resultados/2025-09-26_11-00/: Errores.txt  tokens.txt
resultados/2025-09-26_13-01/: AST.txt
resultados/2025-09-26_13-02/: AST.txt
